Fix/header popups tripfinder (#32)
* Navigation - tablet, product price - tablet, Trip finder form, Filters - mobile, Mega menu - mobile

* Add divider to the button

* Set font-family to the body

* Add build css file

* Bugs fixing - calendar, filters

* Elementor popup - close icon color

* Fix mobile mega menu, add category image field, hamburger menu icon, fix iOS problem

* Fix hamburger bug - iOS

* Fix sub menu arrow

* Style submenu - mobile nav

* Fix mobile mega menu

* Fix mobile nav - scroll

* Mobile nav - phone icon and calendar icon

---------

Co-authored-by: Polina Todorova <polina@grind.bg>

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -11306,9 +11306,13 @@ input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
   justify-content: space-between;
 }
 .mobile-nav .row .mobile-logo {
-  justify-content: flex-start;
+  justify-content: center;
+}
+.mobile-nav .row .mobile-logo .navbar-brand {
+  margin: auto;
 }
 .mobile-nav .row .mobile-menu-toggle {
+  position: relative;
   justify-content: flex-end;
 }
 .mobile-nav .row .mobile-menu-toggle .mega-toggle-block .mega-toggle-animated {
@@ -11348,8 +11352,8 @@ input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
 .mobile-nav .row .mobile-menu-toggle .mega-toggle-block .mega-toggle-animated-inner,
 .mobile-nav .row .mobile-menu-toggle .mega-toggle-block .mega-toggle-animated-inner::before,
 .mobile-nav .row .mobile-menu-toggle .mega-toggle-block .mega-toggle-animated-inner::after {
-  width: 40px;
-  height: 4px;
+  width: 30px !important;
+  height: 3px !important;
   background-color: #000;
   border-radius: 4px;
   position: absolute;
