--- a/wp-content/themes/trek-travel-theme/src/scss/_header.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_header.scss
@@ -148,9 +148,14 @@
     justify-content: space-between;
 
     .mobile-logo {
-      justify-content: flex-start;
+      justify-content:center;
+
+      .navbar-brand {
+        margin: auto;
+      }
     }
     .mobile-menu-toggle {
+      position: relative;
       justify-content: flex-end;
       .mega-toggle-block {
         .mega-toggle-animated {
@@ -190,8 +195,8 @@
         .mega-toggle-animated-inner,
         .mega-toggle-animated-inner::before,
         .mega-toggle-animated-inner::after {
-          width: 40px;
-          height: 4px;
+          width: 30px !important;
+          height: 3px !important;
           background-color: #000;
           border-radius: 4px;
           position: absolute;
