Bugfix/fields validation issues (#34)
* Fixed an issue related to fields validation missing warning messages on checkout step 1
https://app.asana.com/0/1205472772784381/1205843888061004/f

* Fields validation country - improvements

* Modification for the shipping state validation

---------

Co-authored-by: msoltariyski <mario_9881@abv.bg>

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -15842,11 +15842,12 @@ nav .nav-tabs .nav-link.active {
 }
 .checkout-trek .woocommerce-invalid input, .checkout-trek .woocommerce-invalid select,
 .checkout-trek .woocommerce-validated .woocommerce-invalid input,
-.checkout-trek .woocommerce-validated .woocommerce-invalid select {
+.checkout-trek .woocommerce-validated .woocommerce-invalid select,
+.checkout-trek .woocommerce-invalid .select2-selection {
   border-color: #a00 !important;
 }
 .checkout-trek .woocommerce-validated input, .checkout-trek .woocommerce-validated select,
-.checkout-trek .woocommerce-validated .woocommerce-validated input, .checkout-trek .woocommerce-validated .woocommerce-validated select {
+.checkout-trek .woocommerce-validated .woocommerce-validated input, .checkout-trek .woocommerce-validated .woocommerce-validated select, .checkout-trek .woocommerce-validated .select2-selection {
   border-color: #6dc22e !important;
 }
 
