--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -11165,6 +11165,73 @@ input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
   color: #000 !important;
 }
 
+.no-scroll {
+  overflow: hidden !important;
+}
+
+.open-roommate-popup {
+  cursor: pointer;
+}
+
+.open-to-roommate-popup-container {
+  top: 0;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.2196078431);
+  display: none;
+}
+.open-to-roommate-popup-container .open-to-roommate-popup {
+  position: absolute;
+  top: 50%;
+  margin-top: 12px;
+  border-radius: 4px;
+  border: 1px solid #E5E5E5;
+  background: #FFF;
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.05);
+  padding: 18px;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  width: 90%;
+  max-width: 550px;
+  z-index: 9999;
+  padding: 32px 44px;
+  text-align: center;
+}
+@media screen and (max-width: 768px) {
+  .open-to-roommate-popup-container .open-to-roommate-popup {
+    padding: 16px 22px;
+  }
+}
+.open-to-roommate-popup-container .open-to-roommate-popup h3, .open-to-roommate-popup-container .open-to-roommate-popup .h3 {
+  font-size: 30px;
+}
+.open-to-roommate-popup-container .open-to-roommate-popup div, .open-to-roommate-popup-container .open-to-roommate-popup h3, .open-to-roommate-popup-container .open-to-roommate-popup .h3 {
+  text-align: left;
+  margin-bottom: 24px;
+}
+@media screen and (max-width: 768px) {
+  .open-to-roommate-popup-container .open-to-roommate-popup div, .open-to-roommate-popup-container .open-to-roommate-popup h3, .open-to-roommate-popup-container .open-to-roommate-popup .h3 {
+    margin-bottom: 16px;
+  }
+}
+.open-to-roommate-popup-container .open-to-roommate-popup .close-btn {
+  background-color: black;
+  color: white;
+  border-color: black;
+  padding: 14px 16px;
+  width: 32%;
+  font-weight: 500;
+  border-width: 2px;
+}
+.open-to-roommate-popup-container .open-to-roommate-popup .close-btn:hover {
+  background-color: white;
+  color: black;
+}
+
 .header-main__contact-nav {
   border-bottom: 1px solid #E5E5E5;
   display: none;
