--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -15089,33 +15089,41 @@ nav .nav-tabs .nav-link.active {
   border-radius: 4px;
   box-shadow: none;
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
+  .checkout-step-two-hotel__open-to-roommate, .checkout-step-two-hotel__private, .checkout-step-two-hotel__one-bed, .checkout-step-two-hotel__two-bed {
+    flex-direction: row;
+  }
   .checkout-step-two-hotel__assigned-occupants-list {
     order: 0;
   }
   .checkout-step-two-hotel__add-occupants-btn {
     order: 0;
   }
-  .checkout-step-two-hotel__one-bed, .checkout-step-two-hotel__two-bed, .checkout-step-two-hotel__open-to-roommate, .checkout-step-two-hotel__private {
-    align-items: center;
-    flex-direction: row;
+  .checkout-step-two-hotel__add-occupants {
+    width: 50%;
+    justify-content: end;
+    display: flex;
   }
   .checkout-step-two-hotel__room-type {
-    order: 0;
+    order: -1;
+    margin-bottom: 0;
   }
   .checkout-step-two-hotel__room-occupancy {
     width: 50%;
-    flex-grow: 1;
-    order: 0;
+    order: -1;
   }
   .checkout-step-two-hotel__edit-occupants {
-    order: 0;
+    display: flex;
+    width: 50%;
+    justify-content: end;
     margin-bottom: 0;
+    order: -1;
   }
   .checkout-step-two-hotel__room-quantity {
-    justify-content: flex-end;
-    order: 0;
     width: 50%;
+    justify-content: end;
+    gap: 15px;
+    order: -1;
   }
   .checkout-step-two-hotel__open-to-roommate .price, .checkout-step-two-hotel__open-to-roommate .refund-info, .checkout-step-two-hotel__private .price, .checkout-step-two-hotel__private .refund-info {
     width: 100%;
