Add the link to each post item (#56)
Co-authored-by: Polina Todorova <polina@grind.bg>

--- a/wp-content/themes/trek-travel-theme/src/scss/_blog-list.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_blog-list.scss
@@ -52,6 +52,9 @@
         .list-item{
             padding: 0 20px;
             margin: 2rem 0;
+            a {
+                text-decoration: none;
+            }
             .image{
                 img{
                     width: 100%;
