Bugfix/posts links (#57)
* Add the link to each post item

* Style the posts link

* Updated the logic for calculating the travel protection when there is a single supplement fee (#54)

* Updated the logic for calculating the travel protection when there is a single supplement fee
https://app.asana.com/0/1205472772784381/1205603381284238/f

* Moved out of if repeatable code

* Bugfix/auto assign (#55)

* Auto Assign Room
Added the logic for auto assigning room occupancy
https://app.asana.com/0/1205472772784381/1205804857925443/f

* Increased the timeout

* Changed the logic for the modal option selecting

* Saved the variable in constant to have the expected result in all cases

* Added the logic for double occupancy

* Converted string to integer

* Code improvements, covering edge cases

* Removed unused variable

* Room Assignment: Removed the reset thingy that was appearing twice for no apparent reason :)

* Reseting the rooms occupancy when cicking on the minus and fixed wrong data room atributes

* Reset room occupants logic changes

* Checkout page: Increased the timeout on auto assign
Increase the timeout on private and roommate auto assigning
Asana Task: https://app.asana.com/0/1205472772784381/1205804857925443/f

* Checkout page: fix auto assign on step 2
Create a custom event 'occupant.popup.html.ready' to trigger on #addOccupantsModal when html is ready
Assana Task: https://app.asana.com/0/1205472772784381/1205804857925443/f

* Checkout page: fix auto assign on step 2
Fix not js error
Asana Task: https://app.asana.com/0/1205472772784381/1205804857925443/f

* Style room occupancy - checkout

* Hide the button

* Section Select Room and Occupants: Fix wrong behavior on remove occupants, add validations
Fix the whole section for assigning occupants to work properly, add missing validations, fix style
Asana Task: https://app.asana.com/0/1205472772784381/1205804857925443/f

---------

Co-authored-by: 

--- a/wp-content/themes/trek-travel-theme/src/scss/_blog-list.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_blog-list.scss
@@ -53,7 +53,12 @@
             padding: 0 20px;
             margin: 2rem 0;
             a {
+                transition: all ease 0.3s;
                 text-decoration: none;
+
+                &:hover {
+                    color: #28AAE1;
+                }
             }
             .image{
                 img{
