Feature/checkout popup (#58)
* Added new fields in the options page, related to the private and double ocuppancy popup and removed the html code from the footer into a template parts
https://app.asana.com/0/1205472772784381/1206046785691018/f

* Fixed typo in field group name

---------

Co-authored-by: msoltariyski <mario_9881@abv.bg>

--- a/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
@@ -615,10 +615,10 @@
 .no-scroll {
   overflow: hidden !important;
 }
-.open-roommate-popup {
+.open-roommate-popup, .checkout-private-popup, .checkout-double-occupancy {
   cursor: pointer;
 }
-.open-to-roommate-popup-container {
+.open-to-roommate-popup-container, .private-popup-container {
   top: 0;
   display: flex;
   width: 100%;
@@ -629,7 +629,7 @@
   background-color: #00000038;
   display: none;
 
-  .open-to-roommate-popup {
+  .open-to-roommate-popup, .private-popup {
     position: absolute;
     top: 50%;
     margin-top: 12px;
