Bugfix/view itinerary (#59)
* Fixed Itinerary link
https://app.asana.com/0/1205472772784381/1205783492833571/f

* Added JS that closes the chat bot if opened and then print the itinerary

* Added if check to prevent opening chatbot if closed

* Experimenting with JS code to prevent cases where the chabot appears after clicking the print button

* Added JS logic that gets all read more buttons and click them before printing the itinerary

* Added checks for the colapse buttons on mobile

* Print page - each day on new page

* Remove the empty page

* Fix print page

---------

Co-authored-by: msoltariyski <mario_9881@abv.bg>
Co-authored-by: Polina Todorova <polina@grind.bg>

--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
@@ -308,5 +308,50 @@
                 page-break-after: auto;
            }
         }
+
+        .accordion-item__collapsearrival {
+            flex-direction: row !important;
+        }
+
+        .pdp-itinerary-day__accordion-clamp_main {
+            margin-bottom: 5mm !important;
+        }
+
+        .accordion-item-ad__main {
+            padding: 0mm !important;
+        }
+
+        .waymark-shortcode {
+            page-break-after: always;
+        }
+
+        .pdp-itinerary-day__accordion .pdp-itinerary-day__accordion-right img {
+            display: none !important;
+        }
+
+        .pdp-itinerary-day__accordion .pdp-itinerary-day__accordion-right {
+            width: 50% !important;
+        }
+
+        .pdp-itinerary-heading {
+            margin: 2mm 0mm !important;
+        }
+
+        .pdp-itinerary-day__accordion {
+            margin-bottom: 2mm !important;
+        }
+
+        .pdp-itinerary-day__accordion-hotels {
+            margin-bottom: 5mm !important;
+        }
+
+        .pdp-itinerary-day__accordion {
+            padding-right: 0mm !important;
+            margin-bottom: 5mm !important;
+        }
+
+        nav {
+            margin-bottom: 0mm !important;
+        }
     }
 }
