--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
@@ -309,8 +309,16 @@
            }
         }
 
+        .waymark-shortcode {
+           transform: scale(0.8);
+        }
+        #flush-collapsearrival {
+            border: none !important;
+        }
+
         .accordion-item__collapsearrival {
             flex-direction: row !important;
+            page-break-after: always;
         }
 
         .pdp-itinerary-day__accordion-clamp_main {
@@ -352,6 +360,58 @@
 
         nav {
             margin-bottom: 0mm !important;
+            border-bottom: 0 !important;
+        }
+
+        .pdp-itinerary__title {
+            padding-top: 20px !important;
+        }
+
+        .accordion-actions {
+            display: none !important;
+        }
+
+        .accordion-item-ad__a {
+            padding-top: 25px !important;
+        }
+
+        .accordion-item-ad__a, 
+        .pdp-itinerary-day__accordion{
+            flex-direction: column !important;
+            gap: 0 !important;
+            padding-right: 0 !important;
+        }
+
+        .accordion-item-ad__a > div,
+        .pdp-itinerary-day__accordion > div {
+            width: 100% !important;
+        }
+
+        .accordion-item__collapsearrival {
+            flex-direction: column !important;
+        }
+
+        .accordion-body .pdp-itinerary-heading {
+            display: none !important;
+        }
+
+        .accordion-body .pdp-itinerary-rides {
+            padding-top: 16px !important;
+        }
+
+        .accordion-item__collapsearrival .accordion-item-ad__main {
+            width: 100% !important;
+            display: flex !important;
+            flex-wrap: wrap !important;
+        }
+        .accordion-item__collapsearrival .accordion-item-ad__main > p {
+            width: 100% !important;
+        }
+        .accordion-item__collapsearrival .accordion-item-ad__main > div {
+            width: 32%  !important;
+        }
+        .accordion-item__collapsearrival .accordion-item-ad__main > div p {
+            width: auto !important;
         }
     }
 }
