Bugfix/view itinerary (#82)
* Fixed Itinerary link
https://app.asana.com/0/1205472772784381/1205783492833571/f

* Added JS that closes the chat bot if opened and then print the itinerary

* Added if check to prevent opening chatbot if closed

* Experimenting with JS code to prevent cases where the chabot appears after clicking the print button

* Added JS logic that gets all read more buttons and click them before printing the itinerary

* Added checks for the colapse buttons on mobile

* Print page - each day on new page

* Remove the empty page

* Fix print page

* Fix the print page

* Fixes - print page

---------

Co-authored-by: msoltariyski <mario_9881@abv.bg>
Co-authored-by: Polina Todorova <polina@grind.bg>

--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
@@ -302,6 +302,9 @@
 
     }
     @media print {
+        .accordion-body * {
+            break-inside: avoid;
+          }
         .accordion-item {
             page-break-after: always;
             &:last-child {
