Feature/pdp testimonial slider (#91)
* Fix testimonial slidet text , add read more btn

* Fix the slides alignment

* Fix the show-more btn

* Fix the testimonial slider

---------

Co-authored-by: Polina Todorova <polina@grind.bg>

--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-similar-trips.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-similar-trips.scss
@@ -1,5 +1,6 @@
 #similar-trips {
     padding: 3rem 0px 3.5rem 82px;
+    overflow: hidden;
 
     @media screen and (max-width: 991px) {
         padding: 3rem 0 3.5rem 2rem;
