--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
@@ -361,7 +361,12 @@
             margin-bottom: 5mm !important;
         }
 
+        .waymark-shortcode {
+            display: none !important;
+        }
+
         nav {
+            display: none !important;
             margin-bottom: 0mm !important;
             border-bottom: 0 !important;
         }
