--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-overview-navigation.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-overview-navigation.scss
@@ -5,14 +5,18 @@
     }
     background-color: #D3D3D3;
     nav{
-        align-content: center;
+        // align-content: center;
         margin-top: 5rem;
         margin-bottom: 2.5rem;
+
+        .nav-link {
+            padding-left: 0;
+        }
     }
     .overview-info {
         p, .book-trip-cta, .overview-icons{
             display: flex;
-            justify-content: center;
+            // justify-content: center;
         }
         .overview-icons{
             .share-link, .add-wishlist{
