--- a/wp-content/themes/trek-travel-theme/src/scss/_article-detail.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_article-detail.scss
@@ -55,6 +55,49 @@ article.post{
             object-fit: cover;
             width: 100%;
         }
+
+        .btn {
+            // font-weight: 500;
+            padding: 10px 20px;
+            border-radius: 4px;
+            border: 1px solid #000;
+            color: #000;
+            transition: all ease 0.3s;
+
+            &:hover {
+                background-color: #000;
+                color: #fff;
+            }
+
+        }
+    }
+}
+
+.post-navigation  {
+    padding-bottom: 20px;
+    a {
+        color: rgba(0, 0, 0, 0.5) !important;
+        transition: all ease 0.3s;
+
+        &:hover {
+            color: #000 !important;
+        }
+    }
+}
+
+.share-post {
+    margin-bottom: 3rem  !important;
+    p:first-child {
+        margin-top: 5px;
+    }
+    a {
+        width: 40px;
+        height: 42px;
+        background: black;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
