Fix reviews score - styles (#135)
Co-authored-by: Polina Todorova <polina@grind.bg>

--- a/wp-content/themes/trek-travel-theme/src/scss/_search.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_search.scss
@@ -508,6 +508,14 @@ a.refineLink {
                 }
             }
         }
+
+        .card-footer {
+            padding: 0;
+
+            .reviews-count {
+                display: none;
+            }
+        }
     }
     .search-results-container{
         padding-left: 2px;
