My Account: Update Resource center videos
Add descriptions to the videos and some basic CSS

Asana task: https://app.asana.com/0/1205472772784376/1205890972434214

--- a/wp-content/themes/trek-travel-theme/src/scss/my-account/_dashboard.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/my-account/_dashboard.scss
@@ -73,6 +73,20 @@
             background: #fff;
         }
     }
+    .my-account-video {
+        margin: 1rem 0;
+        color: inherit;
+        border: 0;
+        border-bottom: 1px solid;
+
+        &:last-child { 
+            border-bottom: none;
+        }
+
+        iframe {
+            margin-bottom: 1rem;
+        }
+    }
     @include media-breakpoint-up(lg) {
         &__log {
             justify-content: end;
