Feature/related posts plugin (#145)
* Plugin - related posts, styles

* Add slider - related posts (mobile)

* Style slider arrows

* Feedback - fix slider, space between slides

---------

Co-authored-by: Polina Todorova <polina@grind.bg>
Co-authored-by: metodiew <stanko@metodiew.com>

--- a/wp-content/themes/trek-travel-theme/src/scss/_article-detail.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_article-detail.scss
@@ -120,7 +120,16 @@ article.post{
         display: flex !important;
     }
 
+    .slick-slider {
+        padding: 0 !important;
+    }
+    
+    .slick-list {
+        margin: 0 -6px;
+    }
+    
     .slick-slide {
+        margin: 0 6px;
         height: inherit !important;
     }
 
