--- a/wp-content/themes/trek-travel-theme/src/scss/_pdp.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_pdp.scss
@@ -16,6 +16,17 @@
     }
 }
 
+// Activity Type Changes
+.pdp-content-section {
+
+    &.hw {
+        #testimonials .card {
+            border-color: $tt-green;
+        }
+
+    }
+}
+
 .pdp-section {
     padding: 40px 20px 0 20px;
 
