--- a/wp-content/themes/trek-travel-theme/src/scss/_variables.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_variables.scss
@@ -47,6 +47,7 @@ $green:   #167332;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
 $navy:    #001A3B;
+$tt-green:  #6B9214;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -65,7 +66,8 @@ $colors: (
   "black":      $black,
   "white":      $white,
   "gray":       $gray-600,
-  "gray-dark":  $gray-800
+  "gray-dark":  $gray-800,
+  "tt-green":  $tt-green
 );
 // scss-docs-end colors-map
 
