Bike Locking: Improvements on the bike locking (#150)
* Bike Locking: Improvements on the bike locking

Asana: https://app.asana.com/0/1205472772784381/1205959652051670/f

* Bike and Checklist locking: Debugging and fixing a few issues with the locking

--- a/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
@@ -623,3 +623,8 @@ input[type="password"]::-ms-reveal, input[type="password"]::-ms-clear {
 .logged-out .hide-logged-out {
 	display: none!important;
 } 
+
+.checkout-bikes__notice-text {
+    margin-top: 5px;
+    margin-left: 5px;
+}
