--- a/wp-content/themes/trek-travel-theme/src/scss/_search.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_search.scss
@@ -270,6 +270,13 @@
     background-repeat: no-repeat;
     background-position: 90%;
 }
+
+.blog-category-select {
+    @media screen and (max-width: 520px) {
+        width: 93%;
+    }
+}
+
 .sort-option{
     cursor: pointer !important;
 }
