Bugfix/algolia destinations filter (#223)
* Algolia Trip Destinations Filters: make to show destinations from product_cat taxonomy
refactor algolia plugin to can indexing taxonomies_hierarchical, customize archive-product to show only destinations from product_cat
Asana Task: https://app.asana.com/0/1205472772784381/1206590311384262/f

* Algolia Trip Destinations Filter: remove count number

Asana Task: https://app.asana.com/0/1205472772784381/1206590311384262/f

* Algolia Trip Destinations Filter: remove 'Bike Tours' from the labels

Asana Task: https://app.asana.com/0/1205472772784381/1206590311384262/f

* Style the destination filter

---------

Co-authored-by: Petyo Lazarov <plazarov@devrix.com>
Co-authored-by: Polina Todorova <ptodorova@devrix.com>

--- a/wp-content/themes/trek-travel-theme/src/scss/_search.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_search.scss
@@ -309,6 +309,25 @@ li.ais-Menu-item--selected div div.menu-facet-container a.ais-anchor span.f-chec
     margin-right: 10px;
 }
 
+.destinations .d-check img,
+.destinations .d-check span {
+    width: 23px;
+    height: 23px;
+    display: block;
+}
+
+#hierarchical-menu {
+    .destinations {
+        margin-bottom: 0 !important;
+    
+        a {
+            position: relative;
+            margin-bottom: 16px;
+            color: #666;
+            font-weight: 400 !important;
+        }
+    } 
+}
 
 .d-check-a-destinations-active {
     display: block;
