--- a/wp-content/themes/trek-travel-theme/src/scss/_buttons.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_buttons.scss
@@ -93,6 +93,22 @@
     opacity: var(--#{$prefix}btn-disabled-opacity);
     @include box-shadow(none);
   }
+
+  // TT BTN STYLES
+  &.btn-white {
+    font-family: "Roboto", Sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    fill: #000000;
+    color: #000000;
+    background-color: #FFFFFF;
+    border-style: solid;
+    border-width: 2px 2px 2px 2px;
+    border-color: #000000;
+    border-radius: 4px 4px 4px 4px;
+  }
+  
 }
 
 
