--- a/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
@@ -378,10 +378,22 @@
         line-height: 24px;
         color: #000000;
       }
+
+    }
+    #clear-refinements {
+      .ais-ClearRefinements-button {
+        @media (max-width: 767px) { 
+          position: relative;
+          bottom: 0;
+        }
+      }
     }
     .ais-Stats{
       font-size: 16px;
       font-weight: 500;
+      position: relative;
+      bottom: 0;
+      right: 0;
     }    
   }
 }
