Bugsfix/checkout bugs (#234)
* Account icon - change link, register form - add info text

* Scroll to invalid fields in checkout

---------

Co-authored-by: Polina Todorova <ptodorova@devrix.com>

--- a/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
@@ -131,6 +131,13 @@
 .register-form{
     margin-top: 6rem;
     margin-bottom: 7.9rem;
+
+    .re-register-info {
+        font-size: 14px;
+        line-height: 18px;
+        color: #6c757d;
+    }
+    
 .form-group {
     .input-text{
     //   width: 100%;
