--- a/wp-content/themes/trek-travel-theme/src/scss/myaccount/_gear-preferences.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/myaccount/_gear-preferences.scss
@@ -22,6 +22,20 @@
     &__flex {
         gap: 24px;
         order: 2;
+        flex-wrap: wrap;
+
+        .disclaimer-text {
+            width: 100%;
+            p {
+                font-size: 14px;
+                color: #6c757d;
+                line-height: 18px;
+                margin-bottom: 0;
+                a, i {
+                    color: #2c3033;
+                }
+            }
+        }
     }
     &__save {
         font-weight: 500;
@@ -30,6 +44,7 @@
     }
     &__button {
         flex-direction: column;
+        padding: 0 12px;
     }
     &__cancel {
         color: $black;
@@ -74,7 +89,7 @@
         }
         &__button {
             flex-direction: row;
-            margin-top: 48px;
+            margin-top: 28px;
         }
     }
 }
