--- a/wp-content/themes/trek-travel-theme/src/scss/_search.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_search.scss
@@ -414,7 +414,7 @@ a.refineLink {
 .discover-more{
     img{
         border-bottom: 6px solid #28AAE1;
-        width: 35px;
+        width: 100%;
         height: 223px;
         object-fit: cover;
         @media (min-width: 768px) {
