Find a trip: remove relevance filed
Asana task: https://app.asana.com/0/1205472772784381/1206590311384262

--- a/wp-content/themes/trek-travel-theme/src/scss/_search.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_search.scss
@@ -586,3 +586,8 @@ a.refineLink {
 .ais-InfiniteHits-loadMore--disabled{
     display: none;
   }
+
+/* Hide the Filter by Relevance */
+.archive #ais-sortBy {
+    display: none;
+}
