--- a/wp-content/themes/trek-travel-theme/src/scss/_gravity-forms.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_gravity-forms.scss
@@ -10,6 +10,11 @@ form {
         }
     }
 
+    .gform_legacy_markup_wrapper .gform_footer {
+        width: fit-content !important;
+        margin: auto !important;
+    }
+
     input.gform_button.button {
         font-family: 'Roboto';
         font-size: 16px;
