--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-testimonial.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-testimonial.scss
@@ -66,8 +66,9 @@
         .card-img-top {
             height: 266px;
             object-fit: cover;
+            object-position: top center;
             @include media-breakpoint-down(lg) {
-                height: 190px;
+                height: 200px;
             }
         }
     }
