--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -12860,10 +12860,15 @@ a.refineLink {
 }
 @media (min-width: 768px) {
   .pdp-section {
-    padding: 60px 72px 0 72px;
+    padding: 60px 50px 0 50px;
   }
   .pdp-section__divider {
     margin-top: 60px;
+  }
+}
+@media (min-width: 576px) {
+  .pdp-section {
+    padding: 40px 10px 0 10px;
   }
 }
 
@@ -13580,21 +13585,29 @@ a.refineLink {
 .dates-pricing-container .dates-pricing nav {
   margin-bottom: 20px;
 }
+@media (min-width: 768px) {
+  .dates-pricing-container .dates-pricing nav .nav-tabs {
+    gap: 10px;
+  }
+}
+@media (max-width: 767.98px) {
+  .dates-pricing-container .dates-pricing nav .nav-tabs {
+    gap: 2px;
+  }
+}
 .dates-pricing-container .dates-pricing nav #nav-tab-year::-webkit-scrollbar {
   width: 0; /* Remove scrollbar space */
   background: transparent; /* Optional: just make scrollbar invisible */
 }
 @media (max-width: 540px) {
   .dates-pricing-container .dates-pricing nav #nav-tab-year {
-    flex-wrap: nowrap;
-    overflow-x: scroll;
+    flex-direction: column;
     overflow-y: hidden;
     border-bottom: none;
   }
 }
 .dates-pricing-container .dates-pricing nav #nav-tab-year .nav-link {
-  margin-left: 4px;
-  margin-right: 4px;
+  margin: 0;
   color: #666666;
   background: #F4F4F4;
   border-radius: 4px 4px 0px 0px;
@@ -13603,9 +13616,8 @@ a.refineLink {
 @media (max-width: 540px) {
   .dates-pricing-container .dates-pricing nav #nav-tab-year .nav-link {
     flex: none;
-    background: transparent;
     color: #666666;
-    border: unset;
+    border-radius: 4px;
     margin-right: 0 !important;
   }
 }
@@ -13613,7 +13625,6 @@ a.refineLink {
   .dates-pricing-container .dates-pricing nav #nav-tab-year .nav-link {
     font-size: 16px;
     line-height: 24px;
-    margin-right: 20px;
   }
 }
 .dates-pricing-container .dates-pricing nav #nav-tab-year .nav-link.active {
@@ -13624,45 +13635,54 @@ a.refineLink {
 @media (max-width: 540px) {
   .dates-pricing-container .dates-pricing nav #nav-tab-year .nav-link.active {
     font-weight: 700;
-    border-bottom: 4px solid #000;
+    border: 1px solid #C6C6C6;
     color: #000;
+  }
+  .dates-pricing-container .dates-pricing nav #nav-tab-year .nav-link.active span {
+    border-bottom: 4px solid #000;
+    padding-bottom: 7px;
   }
 }
 .dates-pricing-container .dates-pricing nav .nav-tabs-months {
+  gap: 1px;
   border-bottom: 1px solid #D9D9D9;
 }
 .dates-pricing-container .dates-pricing nav .nav-tabs-months .nav-link {
   background: transparent;
   color: #666666;
   border: unset;
+  border-radius: 4px 4px 0px 0px;
+  background-color: #F4F4F4;
 }
 @media (max-width: 991.98px) {
   .dates-pricing-container .dates-pricing nav .nav-tabs-months .nav-link {
     font-size: 16px;
     line-height: 24px;
-    margin-right: 20px;
   }
 }
 .dates-pricing-container .dates-pricing nav .nav-tabs-months .nav-link.active {
+  background-color: white;
   font-weight: 700;
+  border: 2px solid;
   border-bottom: 4px solid #000;
   color: #000;
+  border-color: black;
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-button:not(.collapsed) {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-button:not(.collapsed) {
   color: #000000;
   box-shadow: none;
   background-color: transparent;
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-button:focus {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-button:focus {
   box-shadow: none;
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-button::after {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-button::after {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-plus-lg' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z'/%3E%3C/svg%3E");
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-button:not(.collapsed)::after {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-button:not(.collapsed)::after {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-dash-lg' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z'/%3E%3C/svg%3E");
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .private-accordion::after, .dates-pricing-container .dates-pricing #nav-tabContent-months .private-accordion:not(.collapsed)::after {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .private-accordion::after, .dates-pricing-container .dates-pricing .nav-tabContent-months .private-accordion:not(.collapsed)::after {
   content: "Reserved \f431";
   transform: none;
   background-image: none;
@@ -13676,16 +13696,16 @@ a.refineLink {
   color: #666666;
 }
 @media (max-width: 540px) {
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .private-accordion::after, .dates-pricing-container .dates-pricing #nav-tabContent-months .private-accordion:not(.collapsed)::after {
+  .dates-pricing-container .dates-pricing .nav-tabContent-months .private-accordion::after, .dates-pricing-container .dates-pricing .nav-tabContent-months .private-accordion:not(.collapsed)::after {
     width: 25% !important;
   }
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item {
   border: 1px solid #C6C6C6;
   border-radius: 4px;
   margin: 8px auto;
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .pvt-box {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item .pvt-box {
   display: flex;
   align-items: center;
   width: 100%;
@@ -13695,75 +13715,66 @@ a.refineLink {
   text-align: left;
 }
 @media (max-width: 540px) {
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item button, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .pvt-box {
-    flex-direction: column;
-    align-items: flex-start;
+  .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item button, .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item .pvt-box {
+    flex-direction: row;
+    align-items: center;
   }
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item button span, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .pvt-box span {
+  .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item button span, .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item .pvt-box span {
     width: 100% !important;
   }
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item button::after, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .pvt-box::after {
-    position: absolute;
-    right: 1rem;
-  }
 }
-@media (max-width: 540px) {
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item button span, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .pvt-box span {
-    margin-bottom: 0.5rem;
-  }
-}
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item button span.join-waitlist::before, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .pvt-box span.join-waitlist::before {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item button span.join-waitlist::before, .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item .pvt-box span.join-waitlist::before {
   content: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='6' cy='6' r='6' fill='%23F0AA97'/%3E%3C/svg%3E");
   margin-right: 8px;
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item button span.limited-availability::before, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .pvt-box span.limited-availability::before {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item button span.limited-availability::before, .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item .pvt-box span.limited-availability::before {
   content: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='6' cy='6' r='6' fill='%23DEB95C'/%3E%3C/svg%3E");
   margin-right: 8px;
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item button span.guaranteed::before, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .pvt-box span.guaranteed::before {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item button span.guaranteed::before, .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item .pvt-box span.guaranteed::before {
   content: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='6' cy='6' r='6' fill='%2328AAE1'/%3E%3C/svg%3E");
   margin-right: 8px;
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item button span.private::before, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .pvt-box span.private::before {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item button span.private::before, .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item .pvt-box span.private::before {
   content: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='6' cy='6' r='6' fill='%23666666'/%3E%3C/svg%3E");
   margin-right: 8px;
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .accordion-header {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item .accordion-header {
   padding: 1px;
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .accordion-bikes ol, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-item .accordion-hotels ol {
+.dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item .accordion-bikes ol, .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-item .accordion-hotels ol {
   list-style-type: disc;
 }
-.dates-pricing-container .dates-pricing #nav-tabContent-months hr {
+.dates-pricing-container .dates-pricing .nav-tabContent-months hr {
   margin: 0 auto;
   width: 95%;
 }
 @media (max-width: 540px) {
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-body {
+  .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-body {
     display: flex;
     flex-direction: column;
   }
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-body .accordion-book-now {
+  .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-body .accordion-book-now {
     order: -1;
   }
 }
 @media (min-width: 540px) {
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-body .accordion-hotels, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-body .accordion-bikes {
+  .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-body .accordion-hotels, .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-body .accordion-bikes {
     width: 30%;
   }
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-body .accordion-book-now {
+  .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-body .accordion-book-now {
     width: 40%;
     text-align: end;
   }
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-body .accordion-book-now h5, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-body .accordion-book-now .h5 {
+  .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-body .accordion-book-now h5, .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-body .accordion-book-now .h5 {
     margin-bottom: 0;
   }
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-body .accordion-book-now button {
+  .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-body .accordion-book-now button {
     margin-bottom: 1rem;
   }
 }
 @media (max-width: 540px) {
-  .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-body .accordion-book-now button, .dates-pricing-container .dates-pricing #nav-tabContent-months .accordion-body .accordion-hotels {
+  .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-body .accordion-book-now button, .dates-pricing-container .dates-pricing .nav-tabContent-months .accordion-body .accordion-hotels {
     margin-bottom: 1rem;
   }
 }
@@ -13794,11 +13805,13 @@ a.refineLink {
     display: none;
   }
 }
-.dates-pricing-container #select-month {
+.dates-pricing-container .select-months {
   display: none;
 }
 @media (max-width: 540px) {
-  .dates-pricing-container #select-month {
+  .dates-pricing-container .select-months {
+    text-align: center;
+    font-weight: 500;
     display: block;
     border: 1px solid #B2B3B6;
     border-radius: 4px;
@@ -13807,7 +13820,7 @@ a.refineLink {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-chevron-expand' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M3.646 9.146a.5.5 0 0 1 .708 0L8 12.793l3.646-3.647a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 0-.708zm0-2.292a.5.5 0 0 0 .708 0L8 3.207l3.646 3.647a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 0 0 0 .708z'/%3E%3C/svg%3E");
     background-size: 1.5rem;
   }
-  .dates-pricing-container #select-month:focus {
+  .dates-pricing-container .select-months:focus {
     box-shadow: none;
   }
 }
