--- a/wp-content/themes/trek-travel-theme/src/scss/_pdp.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_pdp.scss
@@ -42,11 +42,14 @@
     }
 
     @include media-breakpoint-up(md) {
-        padding: 60px 72px 0 72px;
+        padding: 60px 50px 0 50px;
 
         &__divider {
             margin-top: 60px;
         }
+    }
+    @include media-breakpoint-up(sm) {
+        padding: 40px 10px 0 10px;
     }
 }
 
