--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-dates-pricing.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-dates-pricing.scss
@@ -98,7 +98,23 @@
                 }
             }
         }
-        #nav-tabContent-months{
+        .nav-tabContent-months{
+            .accordion-button, .pvt-box {
+                gap: 15px;
+
+                .w-40 {
+                    width: 40%;
+                }
+                .d-box {
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    flex-wrap: wrap;
+                    gap: 15px;
+                }
+            }
+
+
             .accordion-button:not(.collapsed){
                 color: #000000;
                 box-shadow: none;
@@ -149,6 +165,11 @@
                         align-items: flex-start;
                         span{
                             width: 100% !important;
+                            &.d-rsv {
+                                width: 20px;
+                                display: flex;
+                                justify-content: flex-end;
+                            }
                         }
                         &::after{
                             position: absolute;
@@ -156,6 +177,13 @@
                         }
                     }
                     span{
+
+                        &.d-rsv {
+                            width: 20px;
+                            display: flex;
+                            justify-content: flex-end;
+                        }
+
                         @media (max-width: 540px) {
                             margin-bottom: .5rem;
                         }
