--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-overview-navigation.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-overview-navigation.scss
@@ -1,4 +1,12 @@
 // PDP navigation menu sticky sidebar Desktop
+
+.navigation-sticky {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: 30px;
+}
 .overview-sidebar-desktop{
     @media (max-width: 767px) {
         display: none;
